--- a/config/polybar/config.ini
+++ b/config/polybar/config.ini
@@ -16,6 +16,7 @@ include-file = $HOME/.config/polybar/colors.ini
 include-file = $HOME/.config/polybar/modules.ini
 
 [bar/top]
+locale = ru_RU.UTF-8
 tray-position = right
 tray-padding =5
 width =  100% ;98%
