--- a/config/polybar/modules.ini
+++ b/config/polybar/modules.ini
@@ -24,7 +24,7 @@ content-foreground = #2b2f37
 type = internal/temperature
 thermal-zone = 0
 warn-temperature = 70
-
+zone-type = x86_pkg_temp
 format = <ramp> <label>
 format-warn = <ramp> <label-warn>
 format-padding = 0 
